--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CineGenesis AI</title>
+    
+    <!-- SEO & Meta Data -->
+    <title>CineGenesis AI - Like Look Solutions</title>
+    <meta name="description" content="Criação de vídeos cinematográficos com personagens fictícios baseados em arquétipos visuais. Desenvolvido por Julio Campos Machado - Like Look Solutions." />
+    <meta name="author" content="Julio Campos Machado - Like Look Solutions" />
+    <meta name="keywords" content="AI, Video Generation, CineGenesis, Gemini, Veo, Filmmaking, Like Look Solutions, Julio Campos Machado" />
+    
+    <!-- Favicon (Cinematic Gold Icon) -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23f59e0b' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'><rect x='2' y='7' width='20' height='15' rx='2' ry='2'></rect><polyline points='17 2 12 7 7 2'></polyline></svg>" />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
