feat: Improve video generation error handling and API key logic
Enhance the robustness of the video generation process by:
- Adding specific checks for Veo operation errors and providing more informative error messages to the user.
- Improving the handling of cases where the video URI is not returned.
- Refactoring API key validation to prioritize user-provided keys and fall back to extension keys, with clearer error messages if no key is available.
- Updating meta keywords in `index.html` to include "Video AI".

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>CineGenesis AI - Like Look Solutions</title>
     <meta name="description" content="Criação de vídeos cinematográficos com personagens fictícios baseados em arquétipos visuais. Desenvolvido por Julio Campos Machado - Like Look Solutions." />
     <meta name="author" content="Julio Campos Machado - Like Look Solutions" />
-    <meta name="keywords" content="AI, Video Generation, CineGenesis, Gemini, Veo, Filmmaking, Like Look Solutions, Julio Campos Machado" />
+    <meta name="keywords" content="AI, Video Generation, CineGenesis, Gemini, Veo, Filmmaking, Like Look Solutions, Julio Campos Machado, Video AI" />
     
     <!-- Favicon (Cinematic Gold Icon) -->
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23f59e0b' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'><rect x='2' y='7' width='20' height='15' rx='2' ry='2'></rect><polyline points='17 2 12 7 7 2'></polyline></svg>" />
